--- a/doc/source/_static/css/custom.css
+++ b/doc/source/_static/css/custom.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1, h2, h3, h4, a, .page-item, .page-link, .pre {
-    color: #083e8c;
+    color: #083e8c ;
 }
 a.current.reference.internal, span.toctree.epxand, a:hover, .page-link:hover {
     color: #5bc0de;
@@ -17,6 +17,10 @@ a.current.reference.internal, span.toctree.epxand, a:hover, .page-link:hover {
     display: inline-block;
     margin-bottom: 0;
     color: #5bc0de
+}
+.toc .current>a>.toctree-expand {
+    background-color: #083e8c;
+    color: #fff;
 }
 
 .root{
